--- a/Src/App/OffersManagement.Host.WebApi/OffersManagement.Host.WebApi.csproj
+++ b/Src/App/OffersManagement.Host.WebApi/OffersManagement.Host.WebApi.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Lib\OffersManagement.Application\OffersManagement.Application.csproj" />
+    <ProjectReference Include="..\..\Lib\OffersManagement.Infrastructure\OffersManagement.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
