--- a/Src/Lib/OffersManagement.Infrastructure/OffersManagement.Infrastructure.csproj
+++ b/Src/Lib/OffersManagement.Infrastructure/OffersManagement.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.143" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Npgsql" Version="7.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OffersManagement.Domain\OffersManagement.Domain.csproj" />
   </ItemGroup>
 
